  proprocessor output on stdout.

- Fixed a bug in the option parsing for Ice tools such as
  slice2cpp, slice2java, slice2cs, etc. The option parser
  used to incorrectly complain about repeated options when
  in fact no option was repeated. Also changed the parser
  to permit options to follow an argument, so

      slice2cpp -I. x.ice

  and

      slice2cpp x.ice -I.

  are now equivalent.

Changes since version 2.0.0
---------------------------

- Added setDefaultContext() and getDefaultContext() to the
  Ice::Communicator interface. This allows a default context to be
  established on a communicator-wide basis. See section 29.8.3 in
  the doc.

  Added ice_defaultContext to Ice::ObjectProxy. This creates a new
  proxy that uses the default context established on the communicator.

Changes since version 1.1.2
---------------------------

- Compatibility with Ice 2.0.0.

- Added the communicator method getProperty(name[, default]).

- The configuration directives in an INI file are now named
  "ice.config", "ice.slice", and "ice.options", for consistency
  with the global directives. The previous directive names are
  still supported.

- Fixed a bug that prevented Apache 1.x from starting.

- The documentation has always stated that same-named constructs
  cannot be directly nested inside each other. (For example, a
  module `M' cannot contain a constant named `M'.) The Slice parser
  compiler did not enforce this correctly up to now for modules
  containing constructs with the same name as the enclosing module.
  This has been fixed and now results in a diagnostic.

- The Slice parser now deprecates Slice definitions at global scope:
  only modules can be defined at global scope. Everything else
  (constants, classes, interfaces, etc.) must be defined inside a
  module.

  For the time being, the compiler issues a warning for each global
  definition but continues to compile the code. Global non-module