@@ -18,6 +18,7 @@
 extern "C"
 {
 ZEND_FUNCTION(Ice_ObjectPrx___construct);
+ZEND_FUNCTION(Ice_ObjectPrx___tostring);
 ZEND_FUNCTION(Ice_ObjectPrx_ice_isA);
 ZEND_FUNCTION(Ice_ObjectPrx_ice_ping);
 ZEND_FUNCTION(Ice_ObjectPrx_ice_id);
@@ -48,6 +49,7 @@ ZEND_FUNCTION(Ice_ObjectPrx_ice_checkedCast);
 
 #define ICE_PHP_PROXY_FUNCTIONS \
     ZEND_FE(Ice_ObjectPrx___construct,           NULL) \
+    ZEND_FE(Ice_ObjectPrx___tostring,            NULL) \
     ZEND_FE(Ice_ObjectPrx_ice_isA,               NULL) \
     ZEND_FE(Ice_ObjectPrx_ice_ping,              NULL) \
     ZEND_FE(Ice_ObjectPrx_ice_id,                NULL) \
