@@ -18,6 +18,10 @@ Changes since version 2.1.0
 
   are now equivalent.
 
+- Attempting to print a proxy value resulted in a fatal error.
+  This has been fixed so that printing a proxy displays it in
+  stringified form.
+
 Changes since version 2.0.0
 ---------------------------
 
